Refactor Angular app compilation process and remove unused file.
Restructured `JWebMPTypeScriptCompiler` to leverage async processing for improved performance. Removed `angular_bak.json` and adjusted `.gitignore` to include Node.js, NextJS, and Angular-specific files. Added enhanced support for file filters, resource processing, and configuration renderings.